added syslog and license config to basic_ansible

--- a/basic_ansible/files/90-remotesyslog.conf.j2
+++ b/basic_ansible/files/90-remotesyslog.conf.j2
@@ -1,5 +1,6 @@
-
 ## File Managed by Ansible ##
+## /etc/rsyslog.d/90-remotesyslog.conf
+
 ## Copy all messages to the remote syslog servers indicated below
 {% if syslog_server is defined -%}
 *.*                             @{{ syslog_server }}
